<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/test_questions_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:padding="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/test_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/test7"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textSize="26sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="48dp"
                android:weightSum="10">

                <Button
                    android:id="@+id/btn_no"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/response_2"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="18sp"
                    android:background="@drawable/button_no_background"
                    android:layout_marginEnd="16dp"/>

                <Button
                    android:id="@+id/btn_yes"
                    android:layout_weight="5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/response_1"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="18sp"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="16dp"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/test_results_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/doc"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/results"
                android:gravity="center"
                android:textSize="24sp"
                android:padding="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_risk_is"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/text_blackish"
                android:paddingBottom="16dp"/>

            <TextView
                android:id="@+id/probability_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/probability"
                android:textColor="@color/green"
                android:textSize="52sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:gravity="center"/>

            <TextView
                android:id="@+id/action_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_to_take"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textStyle="bold"
                android:gravity="center"/>

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_test"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textSize="18sp"
                android:background="@drawable/button_no_background" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>