<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".view.ui.donate.DonationFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/donate"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_donate_funds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/donate_funds"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="20dp"
        android:weightSum="10">

        <View
            android:layout_weight="4"
            android:layout_width="0dp"
            android:background="@color/colorPrimaryDark"
            android:layout_height="0.5dp"/>

        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:gravity="center"/>

        <View
            android:layout_weight="4"
            android:layout_width="0dp"
            android:background="@color/colorPrimaryDark"
            android:layout_height="0.5dp"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_donate_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate_materials"/>


</LinearLayout>